# PyQt-Qwt

./: 06_python_compat.patch  README.md  THANKS.md  changelog  clean.sh  configure-old.py  configure.py  project.py  pyproject-qt6.toml  pyproject.toml  qwt_series_data_h.patch  qwt_series_store_h.patch  ubuntu_20_04_comple.sh
debian/: .control.kate-swp  changelog  clean  control  copyright  pyqt5.qwt-dev.install  pyqt6.qwt-dev.install  python3-pyqt5.qwt.install  python3-pyqt6.qwt.install  rules  watch
examples/: animation.py  bode.py  scatterplot.py  simpleplot.py  tvplot.py
header/: qwt_series_data.h  qwt_series_store.h
qt4examples/: animation.py  barchart.py  bode.py  radio.py  scatterplot.py  simpleplot.py  spectrogram.py  sysinfo.py  tvplot.py
qt5examples/: animation.py  barchart.py  bode.py  controls.py  curvdemo1.py  dials.py  oscilloscope.py  radio.py  scatterplot.py  simpleplot.py  spectrogram.py  sysinfo.py  tvplot.py
qt5qwt62examples/: animation.py  bode.py  controls.py  curvdemo1.py  dials.py  friedberg.py  simpleplot.py  sinusplot.py  spectrogram.py  tvplot.py
qt5qwt6examples/: dials.py  tvplot.py
qt6examples/: animation.py  barchart.py  bode.py  controls.py  curvdemo1.py  dials.py  friedberg.py  radio.py  scatterplot.py  simpleplot.py  sinusplot.py  spectrogram.py  sysinfo.py  tvplot.py
sip/: QtQStack.sip  Qwt_Qt4.sip  Qwt_Qt5.sip  configure.py  conversions.sip  qmap_convert.sip  qwt.sip  qwt_abstract_scale.sip  qwt_abstract_scale_draw.sip  qwt_abstract_slider.sip  qwt_axis.sip  qwt_axis_id.sip  qwt_clipper.sip  qwt_color_map.sip  qwt_dial.sip  (+66 more)
(+131 files in other folders)
